--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@ body {
 	margin: 0;
 	border: 0;
 	background-color: #111;
+	/*
 	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
+	*/
 }
 
 #gameArea {
